--- a/index.html
+++ b/index.html
@@ -92,25 +92,38 @@
 
                     <p class="text">This certificate goes to</p>
 
+                    <div>
+                        <button class="continue-left" onclick="slide('prev')"><img class="img-left"
+                                src="/img/Chevron left.png" alt="continue left"></button>
+
+                    </div>
+
+                    <div>
+
+                        <button class="continue-right" onclick="slide('next')"><img class="img-right"
+                                src="/img/Chevron right.png" alt="continue right"></button>
+                    </div>
+
                     <div class="line1">
                         <input id="textbox5" type="name" placeholder="Insert Name">
                         <hr>
                     </div>
-                    <p>This certificate is given for your amazing dedication</p>
+                    <p class="under">This certificate is given for your amazing dedication</p>
 
                     <div class="line2">
                         <input id="textbox6" type="name" placeholder="Insert Name">
                         <hr>
                     </div>
-                    <p>Received From</p>
+                    <p class="under-second">Received From</p>
                 </section>
-                <div class="pagebutton">
-                    <button class="continue-left" onclick="slide('prev')"><img class="img-left"
-                            src="/img/Chevron left.png" alt="continue left"></button>
-                    <button class="continue-right" onclick="slide('next')"><img class="img-right"
-                            src="/img/Chevron right.png" alt="continue right"></button>
-                </div>
+               
+                <section class="row2">
+                    <img class="bottom-left" src="/img/bottom-left.png" alt="bottom left corner">
+                    <img class="bottom-right" src="/img/bottom-right.png" alt="bottom right corner">
+                </section>
             </div>
+
+            <!-- start of page 3 -->
             <div class="page three">
                 <img class="i" src="/img/fortnite llama 1.png" alt="fortnite llama">
                 <img class="i2" src="/img/victoryroyale 1.png" alt="victory royale">
