--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <div class="pages">
             <div class="page one">
 
-                <div class="vl"></div>
-                <img src="/img/ribbon-removebg-preview.png" alt="image of gold ribbon">
+                <img class="fribbon" src="/img/ribbon-removebg-preview.png" alt="image of gold ribbon">
                 <!-- circles that go bottom left of page -->
                 <section class="columnbottomleft">
                     <img src="/img/Ellipse 1.png" alt="red circle">
@@ -47,15 +46,20 @@
                     <img src="/img/Ellipse 1.png" alt="red circle">
                     <img src="/img/Ellipse 1.png" alt="red circle">
                 </section>
+                <section class="column-circle4">
+                    <img src="/img/Ellipse 1.png" alt="red circle">
+                    <img src="/img/Ellipse 1.png" alt="red circle">
+                </section>
 
-                <h1>CERTIFICATE</h1>
-                <h2>OF COMPLETION</h2>
+                <h3>CERTIFICATE</h1>
+                <h4>OF COMPLETION</h2>
 
-                <p>We honor this award to</p>
+                <p class="first-under">We honor this award to</p>
+                    <div>
+                        <input id="textbox3" type="name" placeholder="Insert Name">
+                    </div>
 
-                <input id="textbox3" type="name" placeholder="Insert Name">
-
-                <p>For your hard work and dedication </p>
+                <p class="undertextbox">For your hard work and dedication </p>
 
                 <section class="containerpagebottom">
                     <section class="pagebottom">
@@ -64,15 +68,15 @@
                             <hr>
                             <p>Chief Executive</p>
                         </div>
+                    </section>
 
                         <section class="pagebottom2">
                             <div class="line5">
-                                <input id="textbox5" type="name" placeholder="Insert Name">
+                                <input id="textbox10" type="name" placeholder="Insert Name">
                                 <hr>
                                 <p>Co Executive</p>
                             </div>
                         </section>
-                    </section>
                 </section>
                 <div class="first-row2">
                     <button class="firstcontinue-right" onclick="slide('next')"><img class="firstimg"
